# ckcoins

./: Cargo.toml  README.md  dfx.json  protocol.did
frontend/assets/: main.css
frontend/src/: actions.jsx  app.jsx  ckCoins_status.jsx  elliptic_status.jsx  index.html  index.jsx
frontend/src/components/: footer.css  footer.jsx  info_bar.jsx  landing.css  landing.tsx  lib.tsx  liquidity.css  liquidity.tsx  login.css  login.tsx  navbar.css  navbar.jsx  social_network.jsx  statistics.jsx  status.jsx  swap.tsx  swapBox.tsx
frontend/src/components/vaults/: CopyButton.css  CopyButton.tsx  NewVault.css  NewVault.tsx  VaultMenu.css  VaultMenu.tsx  my_vaults.css  my_vaults.tsx  vaults_table.css  vaults_table.tsx
frontend/src/utils/: auth.tsx  canister_ids.json  state.tsx
frontend/src/utils/interfaces/core/: core.ts  core_idl.ts
frontend/src/utils/interfaces/icrc1/: icrc1.ts  icrc1_idl.ts
protocol/: dashboard.rs  event.rs  guard.rs  lib.rs  liquidity_pool.rs  logs.rs  main.rs  management.rs  numeric.rs  state.rs  storage.rs  tests.rs  vault.rs  xrc.rs
protocol/numeric/: tests.rs
protocol/tests/: tests.rs
