[package]
name = "protocol-canister"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "protocol-canister"
path = "protocol/main.rs"

[lib]
path = "protocol/lib.rs"

[features]
self_check = []

[dependencies]
candid = "0.9.5"
ciborium = "0.2.1"
ic0 = "0.18.9"
ic-canister-log = { path = "../ic/rs/rust_canisters/canister_log" }
ic-canisters-http-types = { path = "../ic/rs/rust_canisters/http_types" }
ic-cdk = "0.10.0"
ic-cdk-timers = "0.4.0"
ic-cdk-macros = "0.7.0"
ic-icrc1-client-cdk = { path = "../ic/rs/rosetta-api/icrc1/client/cdk" }
ic-metrics-encoder = "1"
ic-xrc-types = "1.0.0"
ic-stable-structures = "0.5.6"
icrc-ledger-types = { path = "../ic/packages/icrc-ledger-types" }
rust_decimal = "1.32.0"
rust_decimal_macros = "1.32"
serde = "1.0.171"
serde_bytes = "0.11"
serde_json = "1.0.96"

[dev-dependencies]
assert_matches = "1.3.0"
protocol-canister = { path = "./" }
ic-base-types = { path = "../ic/rs/types/base_types" }
ic-state-machine-tests = { path = "../ic/rs/state_machine_tests" }
ic-ledger-canister-core = { path = "../ic/rs/rosetta-api/ledger_canister_core" }
ic-ic00-types = { path = "../ic/rs/types/ic00_types" }
ic-icrc1-ledger = { path = "../ic/rs/rosetta-api/icrc1/ledger" }
lazy_static = "1.4.0"
xrc-mock = { path = "../ic/rs/rosetta-api/tvl/xrc_mock" }
rand = "0.8.5"
proptest = "1.0"
